common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haenu
---
apiVersion: v1
kind: Namespace
metadata:
  name: leaven
---
apiVersion: v1
kind: Namespace
metadata:
  name: api
---
apiVersion: v1
kind: Namespace
metadata:
  name: legacy
---
apiVersion: v1
kind: Namespace
metadata:
  name: supa-dev-tewind-space
