common/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: cert-manager
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.5
        args:
        - --source=ingress
        - --provider=cloudflare
        - --zone-id-filter=d02846d4056c80e41c9f2fe7dec56847 # (optional) limit to a specific zone.
        - --cloudflare-proxied
        - --cloudflare-dns-records-per-page=5000
