common/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    external-dns.alpha.kubernetes.io/hostname: "git.haenu.xyz"
spec:
  ingressClassName: "nginx"
  rules:
  - host: git.haenu.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port: 
              number: 3000

  tls:
  - hosts:
    - git.haenu.xyz
    secretName: letsencrypt-prod
