common/kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    external-dns.alpha.kubernetes.io/hostname: "kuma.haenu.xyz"
spec:
  ingressClassName: "nginx"
  rules:
  - host: kuma.haenu.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            namespace: monitoring
            port: 
              number: 3001
  tls:
  - hosts:
    - kuma.haenu.xyz
    secretName: letsencrypt-prod
